// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works as expected 1`] = `
Cache {
  "private": Object {
    "items": Object {},
    "maxSize": 9,
    "size": 0,
  },
}
`;

exports[`works as expected 2`] = `
Cache {
  "private": Object {
    "items": Object {
      "A": Object {
        "data": "123",
        "timestamp": 1617580800000,
      },
      "B": Object {
        "data": "123456",
        "timestamp": 1617580801000,
      },
    },
    "maxSize": 9,
    "size": 9,
  },
}
`;

exports[`works as expected 3`] = `
Cache {
  "private": Object {
    "items": Object {
      "A": Object {
        "data": "ab",
        "timestamp": 1617580802000,
      },
      "B": Object {
        "data": "123456",
        "timestamp": 1617580801000,
      },
    },
    "maxSize": 9,
    "size": 8,
  },
}
`;

exports[`works as expected 4`] = `
Cache {
  "private": Object {
    "items": Object {
      "A": Object {
        "data": "ab",
        "timestamp": 1617580802000,
      },
      "C": Object {
        "data": "21",
        "timestamp": 1617580803000,
      },
    },
    "maxSize": 9,
    "size": 4,
  },
}
`;
